[package]
name = "arachiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = { version = "54.2.0", default-features = false, features = ["zstd"] }
thiserror = "1.0.61"
btleplug = "0.11.5"
chrono = "0.4.38"
clap = "4.5.30"
color-eyre = "0.6.3"
csv = "1.3.1"
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["time", "rt-multi-thread", "macros"] }
unicode-segmentation = "1.11.0"
uuid = "1.8.0"
